<resources>
    <string name="app_name">Tic_Tac_Toe</string>
    <string name="welcome_to_tic_tac_toe">Welcome to tic-tac-toe</string>
    <string name="grid">Our main grid</string>
    <string name="imageView0">imageView0</string>
    <string name="imageView1">imageView1</string>
    <string name="imageView2">imageView2</string>
    <string name="imageView3">imageView3</string>
    <string name="imageView4">imageView4</string>
    <string name="imageView5">imageView5</string>
    <string name="imageView6">imageView6</string>
    <string name="imageView7">imageView7</string>
    <string name="imageView8">imageView8</string>
    <string name="status">Status of Game</string>
    <string name="playAgain">playAgain</string>
    <string name="topdown1">topdown1</string>
    <string name="topdown2">topdown2</string>
    <string name="topdown3">topdown3</string>
    <string name="leftright">leftright</string>
    <string name="leftright2">leftright2</string>
    <string name="leftright3">leftright3</string>
    <string name="d1">d1</string>
    <string name="d2">d2</string>

</resources>