<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="23dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_background"
        android:fontFamily="@font/aladin"
        android:text="@string/welcome_to_tic_tac_toe"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="390dp"
        android:layout_height="599dp"
        android:contentDescription="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/table1" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#14E10D"
        android:onClick="gameReset"
        android:text="@string/playAgain"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/status"
        android:layout_width="246dp"
        android:layout_height="37dp"
        android:layout_marginBottom="10sp"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/topdown1"
        android:layout_width="20dp"
        android:layout_height="400dp"
        android:layout_marginEnd="280dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/status"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/straightline" />

    <ImageView
        android:id="@+id/topdown3"
        android:layout_width="20dp"
        android:layout_height="400dp"
        android:layout_marginStart="280dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/topdown3"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/straightline" />

    <ImageView
        android:id="@+id/topdown2"
        android:layout_width="20dp"
        android:layout_height="400dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/topdown1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/straightline" />

    <ImageView
        android:id="@+id/leftright"
        android:layout_width="400dp"
        android:layout_height="20dp"
        android:layout_marginBottom="280dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/leftright"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/straightline" />

    <ImageView
        android:id="@+id/leftright2"
        android:layout_width="400dp"
        android:layout_height="20dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/leftright2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/straightline" />

    <ImageView
        android:id="@+id/leftright3"
        android:layout_width="400dp"
        android:layout_height="20dp"
        android:layout_marginTop="280dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/leftright3"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/straightline" />

    <ImageView
        android:id="@+id/d1"
        android:layout_width="500dp"
        android:layout_height="20dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/d1"
        android:rotation="-45"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/straightline" />

    <ImageView
        android:id="@+id/d2"
        android:layout_width="500dp"
        android:layout_height="20dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/d2"
        android:rotation="45"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/straightline" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="450dp"
        android:layout_marginTop="27sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/imageView0"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="0"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/imageView1"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/imageView2"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/imageView3"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/imageView4"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/imageView5"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/imageView6"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/imageView7"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/imageView8"
                android:foregroundGravity="center"
                android:onClick="playerTap"
                android:padding="8sp"
                android:tag="8" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>